# prefect-mcp-server

./: .env.local.example  .mcp.json  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Dockerfile.dev  README.md  automation.yaml  conftest.py  create_duplicates.py  evals-results.xml  justfile  pyproject.toml  server.json  test_tools_simple.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  deploy-ingestion-workflow.yml  deploy.yaml  publish.yml  test.yml
evals/: README.md  conftest.py  test_automation_creation.py  test_create_automations.py  test_create_proactive_automation.py  test_create_reactive_automation.py  test_flow_run_failure_reason.py  test_late_runs_diagnosis.py  test_lease_renewal_crash.py  test_trigger_deployment_run.py
evals/automations/: test_debug_action_validation_failure.py
evals/late_runs/: conftest.py  test_cancel_late_runs.py  test_deployment_concurrency.py  test_tag_concurrency.py  test_unhealthy_work_pool.py  test_work_pool_concurrency.py  test_work_queue_concurrency.py
evals/rate_limits/: conftest.py
evals/tools/: spy.py
kubernetes/base/: honeycomb-secret.yaml  kustomization.yaml  networkpolicy.yaml  (+1 more)
scenarios/: README.md  pyproject.toml
scenarios/src/scenarios/: __init__.py  claude.py  prefect_runtime.py
scenarios/tests/: conftest.py  test_prefect_server.py
tests/: conftest.py  test_docs_proxy.py  test_filtering.py  test_flows.py  test_header_auth.py  test_identity.py  test_inspection_integration.py  test_inspection_tools.py  test_prompt.py  test_rate_limits.py  test_server.py  test_types.py
(+37 files in other folders)
